// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNavMenuItem should render 1`] = `
<SideNavMenuItem
  className="custom-classname"
  href="#"
  isActive={false}
>
  <li
    className="cds--side-nav__menu-item custom-classname"
  >
    <Link
      className="cds--side-nav__link"
      element="a"
      href="#"
    >
      <a
        className="cds--side-nav__link"
        href="#"
      >
        <SideNavLinkText>
          <span
            className="cds--side-nav__link-text"
          >
            link
          </span>
        </SideNavLinkText>
      </a>
    </Link>
  </li>
</SideNavMenuItem>
`;

exports[`SideNavMenuItem should render active styles with \`isActive\` or \`aria-current="page"\` 1`] = `
<SideNavMenuItem
  className="custom-classname"
  href="#"
  isActive={true}
>
  <li
    className="cds--side-nav__menu-item custom-classname"
  >
    <Link
      className="cds--side-nav__link cds--side-nav__link--current"
      element="a"
      href="#"
    >
      <a
        className="cds--side-nav__link cds--side-nav__link--current"
        href="#"
      >
        <SideNavLinkText>
          <span
            className="cds--side-nav__link-text"
          >
            link
          </span>
        </SideNavLinkText>
      </a>
    </Link>
  </li>
</SideNavMenuItem>
`;

exports[`SideNavMenuItem should render active styles with \`isActive\` or \`aria-current="page"\` 2`] = `
<SideNavMenuItem
  aria-current="page"
  className="custom-classname"
  href="#"
  isActive={false}
>
  <li
    className="cds--side-nav__menu-item custom-classname"
  >
    <Link
      aria-current="page"
      className="cds--side-nav__link"
      element="a"
      href="#"
    >
      <a
        aria-current="page"
        className="cds--side-nav__link"
        href="#"
      >
        <SideNavLinkText>
          <span
            className="cds--side-nav__link-text"
          >
            link
          </span>
        </SideNavLinkText>
      </a>
    </Link>
  </li>
</SideNavMenuItem>
`;
